<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <Button
        android:id="@+id/button_language_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ukraine" />

    <Button
        android:id="@+id/button_language_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english" />
    <Button
        android:id="@+id/button_language_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/polski" />


    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />
    <Button
        android:id="@+id/button_reset_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_progress"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
